[package]
name = "crfsuite"
version = "0.1.1"
authors = ["Messense Lv <messense@icloud.com>"]
description = "Safe wrapper of crfsuite"
license = "MIT"
repository = "https://github.com/bosondata/crfsuite"
keywords = ["crf", "crfsuite"]
readme = "README.md"
exclude = [
    "python/*"
]

[dependencies]
libc = "0.2"
crfsuite-sys = { path = "crfsuite-sys", version = "0.1" }

[badges]
travis-ci = { repository = "bosondata/crfsuite-rs" }
