[package]
name = "crfsuite"
version = "0.2.6"
authors = ["Messense Lv <messense@icloud.com>"]
description = "Safe wrapper of crfsuite"
license = "MIT"
repository = "https://github.com/bosondata/crfsuite-rs"
keywords = ["crf", "crfsuite"]
readme = "README.md"
exclude = [
    "cabi/*"
]

[dependencies]
libc = "0.2"
crfsuite-sys = { path = "crfsuite-sys", version = "0.1" }

[badges]
travis-ci = { repository = "bosondata/crfsuite-rs" }
