[package]
name = "crfsuite"
version = "0.3.1"
authors = ["Messense Lv <messense@icloud.com>"]
description = "Safe wrapper of crfsuite"
license = "MIT"
repository = "https://github.com/bosondata/crfsuite-rs"
keywords = ["crf", "crfsuite"]
readme = "README.md"
edition = "2018"
exclude = [
    "cabi/*"
]

[dependencies]
libc = "0.2"
crfsuite-sys = { path = "crfsuite-sys", version = "0.3" }

[workspace]
members = [
    ".",
    "crfsuite-sys",
    "cabi",
]
