[package]
name = "crfsuite-cabi"
version = "0.3.1"
authors = ["Messense Lv <messense@icloud.com>"]
publish = false
edition = "2018"

[dependencies]
backtrace = "0.3.5"
crfsuite = { path = "..", version = "0.3" }

[target.'cfg(target_os = "windows")'.dependencies]
libc = "0.2"

[lib]
name = "pycrfsuite"
crate-type = ["cdylib"]
