[package]
name = "crfsuite-sys"
version = "0.1.4"
authors = ["Messense Lv <messense@icloud.com>"]
description = "Rust binding to crfsuite"
license = "MIT"
repository = "https://github.com/bosondata/crfsuite-rs"
categories = ["external-ffi-bindings"]
keywords = ["crf", "crfsuite"]
build = "build.rs"
links = "crfsuite"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[badges]
travis-ci = { repository = "bosondata/crfsuite-rs" }
