[package]
name = "crfsuite-sys"
version = "0.3.1"
authors = ["Messense Lv <messense@icloud.com>"]
description = "Rust binding to crfsuite"
license = "MIT"
repository = "https://github.com/messense/crfsuite-rs"
categories = ["external-ffi-bindings"]
keywords = ["crf", "crfsuite"]
build = "build.rs"
links = "crfsuite"
edition = "2018"
exclude = [
    "crfsuite/ChangeLog",
    "crfsuite/INSTALL",
    "crfsuite/README",
    "crfsuite/configure.in",
    "crfsuite/crfsuite.sln",
    "crfsuite/doc",
    "crfsuite/example",
    "crfsuite/bench",
    "crfsuite/frontend",
    "crfsuite/swig",
    "crfsuite/win32",
    "crfsuite/lib/cqdb"
]

[dependencies]
libc = "0.2"
liblbfgs-sys = "0.1.2"
libcqdb = "0.3.0"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
